--- a/FreeAIr/Resources/Resources.ru.resx
+++ b/FreeAIr/Resources/Resources.ru.resx
@@ -717,13 +717,13 @@
   <data name="MCP_servers_did_not_respond__Save" xml:space="preserve">
     <value>MCP сервера не ответили. Сохранить настройки все равно?</value>
   </data>
-  <data name="Вы_можете_диктовать_промпты" xml:space="preserve">
+  <data name="You_can_dictate_prompts" xml:space="preserve">
     <value>Вы можете диктовать промпты, используя свой голос. Выберите предпочтительный провайдер, постпроцессинг, поставьте курсор в поле промпта, нажмите и удерживайте Right-Ctrl. После отпускания Right-Ctrl начинается распознавание промпта, а потом - постпроцессинг, если он включен.
 
 Провайдеры распознавания:
 - WinRT и Microsoft speech API - встроенные в Windows средства распознавания. Работают хорошо и быстро, однако, поддерживают не все языки.
 - Whisper local - это встроенные в FreeAIr средство распознавания на основе Whisper.net. Работает хорошо и быстро, если есть поддержка Vulkan, использует CPU, если поддержки Vulkan нет. Использует OpenAI Whisper LLM.
-- Whisper OpenAI API - это средство распознавания с использованием Whisper LLM через OpenAI API. Мы можете использовать как remote LLM, так и локальную LLM, например, через KoboldCpp.
+- Whisper OpenAI API - это средство распознавания с использованием Whisper LLM через OpenAI API. Вы можете использовать как remote LLM, так и локальную LLM, например, через KoboldCpp.
 
 При выборе провайдера, может быть отображено окно с его настройками, которые необходимо осуществить, прежде, чем провайдер заработает.
 
